Fix match view: align flags and name of teams.

--- a/app/assets/stylesheets/matches.styl
+++ b/app/assets/stylesheets/matches.styl
@@ -20,17 +20,26 @@
   font-size 12px
   font-weight normal
 
-// img.home_team
-//   height 22px
-//   margin 0 180px 0 10px
-//   width 30px
+.match-home-flag
+  display inline-block
+  
+.match-away-flag
+  float right
+  display inline-block
 
-// img.away_team
-//   height 22px
-//   margin 0 10px 0 180px
-//   width 30px
+.match-teams-info
+  float right
+  display inline-block
+  color #fff
+  font-size 17px
+  font-weight 300
+  margin-top 6px
+  text-align center
+  width 100%
+  margin 0 -40px
+  padding-top 7px
 
-.home-flag img, .away-flag img
+.match-home-flag img, .match-away-flag img
   height 40px
   width 40px
   margin-bottom 10px
@@ -47,13 +56,6 @@
 
 .game-information-text
   margin-bottom 5px
-
-.teams-info
-  color #fff
-  font-size 17px
-  font-weight 300
-  margin-top 6px
-  text-align center
 
 a.teams-info:hover
   text-decoration none
